# f-language

./: ReadMe.md  cspell.json  dune-project
lib/: ast.ml  de_bruijn_transform.ml  dune  flang.ml  lexer.mll  parser.mly  parser_tests.ml  recursion_detection.ml  stack_first_langauge.ml  types.ml
lib/algebra/: algebra.ml  foetus.ml  mat.ml  objects.ml  quasi_arctic.ml
lib/ds/: ds.ml  index_set.ml  index_set.mli  list.ml  namespace.ml  namespace.mli  state.ml
lib/irs/: de_bruijn_transform.ml  flat.ml  index_set.ml  index_set.mli  irs.ml  namespace.ml  namespace.mli  recursion_detection.ml
lib/irs/ast/: ast.ml  expr.ml  pat.ml  stmt.ml  type.ml
lib/term/: all_matches_total.ml  arg_extract.ml  call_extraction.ml  graph.ml  pat_total.ml  seek_traces.ml  term.ml
lib/types/: canonicalize.ml  infer_expr.ml  infer_stmt.ml  type_map.ml  types.ml  unify.ml
test/: dune  parser.ml  test_flang.ml  test_stack_first_language.ml  types.ml
test/algebra/: algebra.ml  mat.ml  quasi_arctic.ml
test/ds/: ds.ml
test/irs/: de_burijn_transform.ml  flat.ml  irs.ml  recursion_detection.ml
test/term/: call_extraction.ml  graph.ml  pat_total.ml  seek_traces.ml  term.ml
test/types/: canonicalize.ml  ty_var_simp.ml  types.ml  unify.ml
test/types/infer/: fixed_point.ml  infer.ml  lambda.ml  lambda_non_rec.ml  lambdaless_non_rec.ml  match.ml  pat.ml
